# udaan-research-agent

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cross-Encoder-Re-Ranking.md  Cross-Source-Synthesis-And-Polarity-Detection.md  Full-Text-Resolution.md  Generation-And-Citation-Weaving.md  Graph-Gateway.md  IMPLEMENTATION.md  Ingestion-And-Parsing.md  LICENSE  PROJECT.md  Query-Orchestration.md  README.md  SECURITY.md  STACK.md  eslint.config.js  package.json  pnpm-lock.yaml  ruff.toml  run.sh  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
infra/: .env.example  docker-compose.yml
services/parsing/: pyproject.toml
services/parsing/tests/: test_chunking.py  test_extract.py  test_ingest.py  test_objstore.py  test_store.py
services/parsing/udaan_parsing/: __init__.py  __main__.py  app.py  chunking.py  embeddings.py  extract.py  ingest.py  objstore.py  parser.py  store.py
services/ranking/: pyproject.toml
services/ranking/tests/: test_app.py  test_reranker.py  test_service.py
services/ranking/udaan_ranking/: __init__.py  __main__.py  app.py  reranker.py  service.py
services/shared/: pyproject.toml
services/shared/tests/: test_providers.py
services/shared/udaan_shared/: __init__.py  config.py  impl.py  providers.py
services/synthesis/: pyproject.toml
services/synthesis/tests/: test_clustering.py  test_synthesize.py
services/synthesis/udaan_synthesis/: __init__.py  __main__.py  app.py  clustering.py  polarity.py  source.py  synthesize.py
