[project]
name = "udaan-shared"
version = "0.0.0"
description = "Shared config loader and provider interfaces for the Udaan Python services."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["udaan_shared"]
